# LabRotations

CHAOS/: .gitignore  README.md  pyproject.toml
CHAOS/libs/edm/: README.md  pyproject.toml
CHAOS/libs/edm/src/edm/: __init__.py  ccm.py  embedding.py  simplex_projection.py  smap.py  tensor.py  util.py
CHAOS/libs/edm/tests/: test_ccm.py  test_embedding.py  test_simplex_projection.py
CHAOS/libs/edmkit/: README.md  pyproject.toml
CHAOS/libs/edmkit/src/edmkit/: ccm.py  embedding.py  graph.py  heap.py  simplex_projection.py  smap.py  tensor.py  util.py
CHAOS/libs/edmkit/tests/: test_embedding.py  test_heap.py  test_util.py
CHAOS/libs/generate/: README.md  pyproject.toml
CHAOS/libs/generate/src/generate/: __init__.py  double_pendulum.py  lorenz.py  mackey_glass.py
CHAOS/notebooks/: LKH.py  clustering.ipynb  double_pendulum.ipynb  jssn.ipynb  matrix.ipynb  memo.md  pipeline.py  plotting.py  sample.ipynb  sampling.ipynb  simplex.ipynb  simplex_projection.ipynb  sst.ipynb  test.ipynb  tour.ipynb
CHAOS/notebooks/outputs/: NODE_COORD_SECTION.txt
CHAOS/openssl/: .gitignore  gen.sh
CHAOS/src/: gene.ipynb  sample.ipynb
CNRU/: .gitignore  README.md  Taskfile.yaml  batch.slurm  pyproject.toml  reconstruct.toml  ruff.toml
CNRU/src/: autoencoder.py  cli.py  finetune.py  input_pipeline.py  reconstruct.py  train_decoder.py
CNRU/src/autoencoder/: __init__.py  model.py  reconstruct.py  train.py
CNRU/src/datasets/egoal/: CITATIONS.bib  README.md  TAGS.txt  __init__.py  checksums.tsv  egoal_dataset_builder.py  egoal_dataset_builder_test.py
CNRU/src/vae/: __init__.py  model.py  reconstruct.py  train.py
NCBC/: .gitignore  README.md  Taskfile.yaml  analysis.ipynb  batch.slurm  prepare-colab.sh  pyproject.toml
NCBC/outputs/: dentate_gyrus.sqlite  ring.sqlite
NCBC/src/: analysis.py  ball-and-stick.py  cli.py  debug.ipynb  dentate_gyrus.py  gap_junction.py  intirinsic_properties.py  main.py  ring.py  runner.py  runner2.py  visualize.py
NCBC/src/cells/: __init__.py  basketcell.py  basketcellparams.tsv  cell.py  granulecell.py  granulecell_parameters.tsv  hippcell.py  hippcell_parameters.tsv  mossycell.py  mossycell_parameters.tsv  parameter.py
NCBC/src/mechanisms/: borgka.mod  cagk.mod  ccanl.mod  gap.mod  gskch.mod  hyperde3.mod  ichan2.mod  lca.mod  nca.mod  tca.mod  tmgsyn.mod  vecstim.mod
NCBC/src/networks/: __init__.py  dentate_gyrus.py  network.py  population.py  ring.py
NCBC/src/outputs/: ring.sqlite
NCBC/src/parallel/: __init__.py  variables.py
NCBC/src/recorders/: __init__.py  action_potential.py  db.py  voltage.py
NCBC/src/simulator/: __init__.py  simulator.py
NCBC/src/spikes/: __init__.py  homogeneous_poisson_process.py  inhomogeneous_poisson_process.py
NCBC/src/visualize/: ring.py
NCBC/src/x86_64/: borgka.c  cagk.c  ccanl.c  gap.c  gskch.c  hyperde3.c  ichan2.c  lca.c  libnrnmech.dylib  makemod2c_inc  mod_func.cpp  nca.c  special  special.nrn  tca.c  tmgsyn.c  vecstim.c
