[project]
name = "chaos"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }
]
dependencies = [
    "pyedm>=1.15.4.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "nbformat>=5.10.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "ipykernel>=6.29.4",
    "pip>=24.0",
    "setuptools>=69.5.1",
    "ipywidgets>=8.1.2",
    "ipympl>=0.9.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chaos"]
