[project]
name = "chaos"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
dependencies = [
    "pyedm>=2.0.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "nbformat>=5.10.4",
    "tinygrad>=0.9.0",
    "polars>=0.20.30",
    "scipy>=1.13.1",
    "kaleido>=0.2.1",
    "pillow>=10.3.0",
    "pyarrow>=16.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.4.4",
    "ipykernel>=6.29.4",
    "pip>=24.0",
    "setuptools>=69.5.1",
    "ipywidgets>=8.1.2",
    "ipympl>=0.9.4",
]

[tool.rye.workspace]
members = ["libs/*"]
