[project]
name = "chaos"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
dependencies = [
    "pyedm>=2.0.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "nbformat>=5.10.4",
    "tinygrad>=0.9.0",
    "polars>=0.20.30",
    "scipy>=1.13.1",
    # 0.2.1 is not ready yet for Mac M1 platform
    "kaleido==0.2.0",
    "pillow>=10.3.0",
    "pyarrow>=16.1.0",
    "umap-learn>=0.5.6",
    "tqdm>=4.66.4",
    "torch>=2.2.2",
    "networkx>=3.3"
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true

[dependency-groups]
dev = [
    "ruff>=0.4.4",
    "ipykernel>=6.29.4",
    "pip>=24.0",
    "setuptools>=69.5.1",
    "ipywidgets>=8.1.2",
    "ipympl>=0.9.4",
]
workaround = [
    # https://github.com/astral-sh/uv/issues/6281#issuecomment-2316166949
    "llvmlite>=0.43.0"
]

[tool.rye.workspace]
members = ["libs/*"]

[tool.ruff]
line-length = 120
