[project]
name = "cnru"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
dependencies = [
    "matplotlib>=3.8.2",
    "wandb>=0.16.1",
    "jax[cpu]>=0.4.23; sys_platform == 'darwin'",
    "jax[cuda11_pip]>=0.4.23; sys_platform == 'linux'",
    "flax>=0.7.5",
    "orbax-checkpoint>=0.4.8",
    "orbax-export>=0.0.3",
    "tensorflow-datasets>=4.9.4",
    "tf-nightly>=2.16.0.dev20231219",
    "tqdm>=4.66.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.1.7"]

[[tool.rye.sources]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
type = "find-links"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
