[project]
name = "ncbc"
version = "0.1.0"
description = ""
authors = [
    { name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }
]
dependencies = ["neuron~=8.2.2", "matplotlib~=3.7.1", "click~=8.1.3"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.270"]

[tool.ruff]
line-length = 180
exclude = [
    ".git",
    ".venv",
    "__pycache__"
]

[tool.hatch.metadata]
allow-direct-references = true
