[project]
name = "ncbc"
version = "0.1.0"
description = ""
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
dependencies = [
    "click>=8.1.7",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "h5py>=3.11.0",
    "neuron>=8.2.4",
    "typeid-python>=0.3.0",
    "tqdm>=4.66.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
    "ipykernel>=6.29.4",
    "pip>=24.0",
    "black>=24.4.0",
    "setuptools>=69.5.1",
]

[tool.ruff]
line-length = 180
exclude = [".git", ".venv", "__pycache__"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
