[project]
name = "edmkit"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
dependencies = [
    "numpy>=2.0.0",
    "tinygrad>=0.9.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.2.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/edmkit"]
