[project]
name = "edmkit"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "numpy>=2.0.0",
    "tinygrad>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"